# homun

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Compiler-Design.md  Compiler.md  Dockerfile  Dockerfile.test  Dockerfile.wasm  README.md  llm.txt  test_ok_err.hom
.github/workflows/: cd.yml  ci.yml  playground.yml  release.yml  test.yml
_site/: builtin.rs  index.html  llm.txt  std.rs
_site/examples/: attr_cfg.hom  attr_derive.hom  binary_search.hom  box_construct.hom  box_match.hom  derive_enum.hom  enum_multi_payload.hom  explicit_generics.hom  ext.rs  ext_collection.rs  ext_deque.rs  ext_dict.rs  ext_math.rs  ext_str.rs  fib.hom  fizzbuzz.hom  hom  match_or_pat.hom  pipeline.hom  quicksort.hom  std_collection.rs  std_math.rs  struct_destruct.hom  test_chars.hom  test_io.hom  test_path_fs.hom  test_re.hom  thread_local_state.hom  (+2 more)
hom-std/: builtin.rs  chars.rs  dict.rs  fs.rs  heap.rs  path.rs  re.rs  set.rs  str_ext.rs
runtime/: dict.rs  heap.rs  re.rs  str_ext.rs
src/: .gitignore  AST.hs  Codegen.hs  Lexer.hs  Main.hs  Parser.hs  Sema.hs  ast.hom  ast.rs  build.rs  codegen.hom  codegen.rs  codegen_imp.rs  homunc.cabal  lexer.hom  lexer.rs  lexer_imp.rs  lib.rs  main.hom  main.rs  main_entry.rs  main_imp.rs  parser.hom  parser.rs  parser_imp.rs  resolver.hom  resolver.rs  resolver_imp.rs  scope.hom  scope_imp.rs  sema.hom  sema.rs  sema_imp.rs
src/dep/: ast_access.rs  codegen_helpers.rs  mod.rs  scope.rs
src/examples/: dfs.hom  fib.hom  fizzbuzz.hom  quicksort.hom  std.rs  std_collection.rs  std_str.rs
tests/: examples.rs  hom_std.rs
(+20 files in other folders)
