cabal-version:      3.0
name:               homunc
version:            0.1.0
synopsis:           Homun to Rust compiler
description:        Compiles Homun scripting language to Rust source text (text-to-text transpiler).
license:            MIT
author:             HomunMage
build-type:         Simple

executable homunc
    main-is:          Main.hs
    other-modules:    Lexer, AST, Parser, Sema, Codegen
    hs-source-dirs:   src
    build-depends:    base >=4.14 && <5
                    , containers
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-imports -O2